# Vertex

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  build.ps1  build.sh  vcpkg.json
src/libtest/: CMakeLists.txt
src/libtest/linux/: main.cc
src/libtest/windows/: main.cc
src/vertex/: CMakeLists.txt  LICENSE  PLUGIN_EXCEPTION.txt  factory.cc  main.cc
src/vertex/configuration/: filesystem.cc  pluginconfig.cc  settings.cc
src/vertex/configuration/linux/: filesystem.cc
src/vertex/configuration/windows/: filesystem.cc
src/vertex/customwidgets/: accesstrackercallstackdialog.cc  accesstrackercontrol.cc  accesstrackerdatamodel.cc  accesstrackerpanel.cc  addaddressdialog.cc  processlistctrl.cc  processlistdatamodel.cc  savedaddressescontrol.cc  savedaddressesdatamodel.cc  savedaddressespanel.cc  scannedvaluescontrol.cc  scannedvaluesdatamodel.cc  scannedvalueslistctrl.cc  scannedvaluespanel.cc  valueeditdialog.cc
src/vertex/customwidgets/base/: sortfiltermodel.cc  vertexdataviewctrl.cc  vertexlistctrl.cc  vertexlistheader.cc  vertexscrolledwindow.cc
src/vertex/debugger/: callbackregistry.cc  debuggerengine.cc  debuggerruntimeservice.cc  debuggerworker.cc  debuggerworker_commands.cc  debuggerworker_handlers.cc
src/vertex/event/: eventbus.cc
src/vertex/gui/events/: processlistfilterevent.cc  sortingevent.cc
src/vertex/gui/iconmanager/: iconmanager.cc
src/vertex/gui/theme/: themeprovider.cc
src/vertex/io/linux/: scanresultstore.cc
src/vertex/io/windows/: io.cc  scanresultstore.cc  virtualregion.cc
src/vertex/language/: language.cc
src/vertex/log/: interop.cc  log.cc
src/vertex/model/: accesstrackermodel.cc  analyticsmodel.cc  debuggermodel.cc  injectormodel.cc  mainmodel.cc  memoryattributemodel.cc  pluginconfigmodel.cc  pointerscanmodel.cc  processlistmodel.cc  scriptingmodel.cc  settingsmodel.cc
src/vertex/runtime/: drain.cc  lifetime_token.cc  loader.cc  plugin.cc  pluginruntimeservice.cc  registry.cc  registry_interop.cc  session_epoch.cc  uiregistry.cc  uiregistry_interop.cc
src/vertex/runtime/linux/: libraryloader.cc
src/vertex/runtime/windows/: libraryloader.cc
src/vertex/scanner/: addressmonitor.cc  memoryscanner.cc  memoryscanner_scan.cc  memoryscanner_store.cc  pluginmemoryreader.cc  pointerscancomparator.cc  pointerscanner.cc  pointerscanner_bfs.cc  pointerscanner_file.cc  pointerscanner_graph.cc  pointerscanner_index.cc  pointerscanner_rescan.cc  scanner_interop.cc  scannerruntimeservice.cc  simd_scanner.cc  type_registry.cc
src/vertex/scripting/: angelscript.cc  scriptarray.cpp  scriptingruntimeservice.cc
src/vertex/thread/: threaddispatcher.cc  vertexmpmcthread.cc  vertexmpscthread.cc  vertexprioritythread.cc  vertexspscthread.cc
src/vertex/view/: aboutview.cc  accesstrackerview.cc  analyticsview.cc  debuggerview.cc  injectorview.cc  mainview.cc  memoryattributeview.cc  newprocessdialog.cc  pluginconfigview.cc  pointerscanconfigdialog.cc  pointerscanview.cc  processlistview.cc  scriptingview.cc  settingsview.cc
src/vertex/view/debugger/: breakpointconditiondialog.cc  breakpointspanel.cc  consolepanel.cc  disassemblycontrol.cc  disassemblypanel.cc  hexeditorpanel.cc  importexportpanel.cc  memorypanel.cc  registerspanel.cc  stackpanel.cc  threadspanel.cc  watchpanel.cc  watchpointspanel.cc
src/vertex/viewmodel/: accesstrackerviewmodel.cc  analyticsviewmodel.cc  debuggerviewmodel.cc  enrichmentqueue.cc  injectorviewmodel.cc  mainviewmodel.cc  memoryattributeviewmodel.cc  pluginconfigviewmodel.cc  pointerscanviewmodel.cc  processlistviewmodel.cc  scriptingviewmodel.cc  settingsviewmodel.cc
src/vertexdeci3rt/: CMakeLists.txt  README.md  init.cc  main.cc
src/vertexdeci3rt/memory/: allocate.cc  construct_attribute_filters.cc  free.cc  get_max_address.cc  get_min_address.cc  get_pointer_size.cc  memory_helpers.cc  query_regions.cc  read_process.cc  write_process.cc
src/vertexdeci3rt/process/: close.cc  get_executable_extensions.cc  get_injection_methods.cc  get_library_extensions.cc  get_list.cc  get_module_exports.cc  get_module_imports.cc  get_modules_list.cc  is_valid.cc  kill.cc  open.cc  open_new.cc
src/vertexusrrt/: CMakeLists.txt  README.md  arch_registers.cc  disassembler.cc  main.cc  vertexusrrt.def  watchpoint_throttle.cc
src/vertexusrrt/linux/debugger/: debugger_options.cc
src/vertexusrrt/linux/disassembler/: disassemble_range.cc
src/vertexusrrt/linux/event/: debugger_attached.cc  event_helpers.cc  process_opened.cc
src/vertexusrrt/linux/memory/: allocate.cc  change_protection.cc  construct_attribute_filters.cc  free.cc  get_max_address.cc  get_min_address.cc  get_pointer_size.cc  query_regions.cc  read_process.cc  write_process.cc
src/vertexusrrt/linux/process/: architecture_detection.cc  close.cc  get_executable_extensions.cc  get_injection_methods.cc  get_list.cc  get_module_exports.cc  get_module_imports.cc  get_modules_list.cc  is_valid.cc  kill.cc  open.cc  open_new.cc  process_helpers.cc
src/vertexusrrt/linux/thread/: get_call_stack.cc  get_exception_info.cc  get_registers.cc  get_threads.cc  priority_value_to_string.cc  read_register.cc  resume_thread.cc  suspend_thread.cc  thread_helpers.cc  write_register.cc
src/vertexusrrt/windows/: disassembler.cc  events.cc  memory.cc  process.cc  thread.cc  wow64.cc
src/vertexusrrt/windows/debugger/: debuggerstate.cc  debugloop.cc
src/vertexusrrt/windows/disassembler/: disassemble_range.cc
src/vertexusrrt/windows/event/: debugger_attached.cc  event_helpers.cc  process_opened.cc
src/vertexusrrt/windows/memory/: allocate.cc  construct_attribute_filters.cc  free.cc  get_max_address.cc  get_min_address.cc  get_pointer_size.cc  memory_helpers.cc  query_regions.cc  read_process.cc  write_process.cc
src/vertexusrrt/windows/process/: close.cc  get_executable_extensions.cc  get_injection_methods.cc  get_library_extensions.cc  get_list.cc  get_module_exports.cc  get_module_imports.cc  get_modules_list.cc  is_valid.cc  kill.cc  open.cc  open_new.cc  process_helpers.cc
src/vertexusrrt/windows/thread/: get_call_stack.cc  (+10 more)
(+388 files in other folders)
